syntax = "proto2";//指定版本信息，不指定会报错
package buffer; //package声明符
message CGPveBuyPowerProto{
 	optional int32 msgType=1 [default = 1072];
}